test/e2e/fixtures/extauth-http/queries-auth-success.json
[
  {
    "url": "/target/4",
    "method": "GET",
    "headers": {
      "kat-req-http-requested-status": "200",
      "Authorization": "foo-11111",
      "kat-req-http-requested-header": "Authorization"
    }
  },
  {
    "url": "/target/5",
    "method": "GET",
    "headers": {
      "X-Forwarded-Proto": "https"
    }
  }
]
