test/e2e/fixtures/extauth-http/queries-bypass.json
[
  {
    "url": "/target/unauthed/6",
    "method": "GET",
    "headers": {
      "kat-req-http-requested-status": "200"
    }
  }
]
