test/e2e/fixtures/extauth-http/queries-load-balancing.json
[
  {
    "url": "/target/8",
    "method": "GET",
    "headers": {
      "kat-req-http-requested-status": "403"
    }
  },
  {
    "url": "/target/9",
    "method": "GET",
    "headers": {
      "kat-req-http-requested-status": "403"
    }
  },
  {
    "url": "/target/10",
    "method": "GET",
    "headers": {
      "kat-req-http-requested-status": "403"
    }
  },
  {
    "url": "/target/11",
    "method": "GET",
    "headers": {
      "kat-req-http-requested-status": "403"
    }
  },
  {
    "url": "/target/12",
    "method": "GET",
    "headers": {
      "kat-req-http-requested-status": "403"
    }
  },
  {
    "url": "/target/13",
    "method": "GET",
    "headers": {
      "kat-req-http-requested-status": "403"
    }
  },
  {
    "url": "/target/14",
    "method": "GET",
    "headers": {
      "kat-req-http-requested-status": "403"
    }
  },
  {
    "url": "/target/15",
    "method": "GET",
    "headers": {
      "kat-req-http-requested-status": "403"
    }
  },
  {
    "url": "/target/16",
    "method": "GET",
    "headers": {
      "kat-req-http-requested-status": "403"
    }
  },
  {
    "url": "/target/17",
    "method": "GET",
    "headers": {
      "kat-req-http-requested-status": "403"
    }
  },
  {
    "url": "/target/18",
    "method": "GET",
    "headers": {
      "kat-req-http-requested-status": "403"
    }
  },
  {
    "url": "/target/19",
    "method": "GET",
    "headers": {
      "kat-req-http-requested-status": "403"
    }
  },
  {
    "url": "/target/20",
    "method": "GET",
    "headers": {
      "kat-req-http-requested-status": "403"
    }
  },
  {
    "url": "/target/21",
    "method": "GET",
    "headers": {
      "kat-req-http-requested-status": "403"
    }
  },
  {
    "url": "/target/22",
    "method": "GET",
    "headers": {
      "kat-req-http-requested-status": "403"
    }
  },
  {
    "url": "/target/23",
    "method": "GET",
    "headers": {
      "kat-req-http-requested-status": "403"
    }
  },
  {
    "url": "/target/24",
    "method": "GET",
    "headers": {
      "kat-req-http-requested-status": "403"
    }
  },
  {
    "url": "/target/25",
    "method": "GET",
    "headers": {
      "kat-req-http-requested-status": "403"
    }
  },
  {
    "url": "/target/26",
    "method": "GET",
    "headers": {
      "kat-req-http-requested-status": "403"
    }
  },
  {
    "url": "/target/27",
    "method": "GET",
    "headers": {
      "kat-req-http-requested-status": "403"
    }
  }
]
