test/e2e/fixtures/extauth-http/queries-status-on-error.json
[
  {
    "url": "/target/7",
    "method": "GET",
    "headers": {
      "kat-req-http-requested-status": "500"
    }
  }
]
